- No longer enforcing order/presence of Given/When/Then within Scenarios

0.3.0
-----
- Adds coulda:print_features task, providing plain text output in a 
  form similar to Cucumber's Gherkin
- Added hooks for Devver's continuous integration API

0.3.1
-----
- Minor refactorings
- Added more examples
- Adds "And" support to Given, When, and Then

0.4.0
-----
- Complete internal redesign/rewrite
- Feature method now accepts a :testcase_class => Class argument specifying the subclass of Test::Unit::TestCase,
  allowing for simple integration with other Test::Unit frameworks

0.4.1
-----
- Modified to use 'pending' instead of 'jeremymcanally-pending' from github (after I removed the 'bones' gem 
  dependency from 'pending')

0.4.2
-----
- Moved 'vendored' files under coulda and added them to the gemspec (woops)

0.4.3
-----
- Put missing rake task in the gemspec
- Added examples that were previously in the git repo but not in the gemspec

0.4.4
-----
- Reversed decision on naming "feature" files as _feature.rb.  Should just be _test.rb like any other test
- Features now register with a World when they are created which is used in the rake task instead of ObjectSpace.each_object

0.4.5
-----
- No longer requires rubygems for Ruby 1.9.1

0.4.6
-----
- Fixed issue where Scenario implementations were not delegating unresolved method calls to the wrapped test.  Should allow for usage of tools such as Webrat

0.4.7
-----
- Aded a newline after a Feature has been printed via the coulda:print_features task

0.5.0
-----
- Coulda::Features are now gone in favor of the Kernel::Feature method hook returning a subclass of Test::Unit::TestCase (or a subclass of the specified :testcase_class).  This should simplify almost everything henceforward
- The block passed to Kernel::Feature changes self to be the Test::Unit::TestCase subclass.  That way, it's virtually identical to a "class Foo < Test::Unit::TestCase"