@@ -67,5 +67,6 @@ Cleanup
 
 0.5.0
 -----
-- Coulda::Features are now gone in favor of the Kernel::Feature method hook returning a subclass of Test::Unit::TestCase (or a subclass of the specified :testcase_class).  This should simplify almost everything henceforward
+- Coulda::Features created from the Kernel::Feature method now create and return a subclass of Test::Unit::TestCase (or a subclass of the specified :testcase_class).
 - The block passed to Kernel::Feature changes self to be the Test::Unit::TestCase subclass.  That way, it's virtually identical to a "class Foo < Test::Unit::TestCase"
+- Removed dependency on Jeremy McAnally's "pending" gem in favor of an implementation targetted specifically to Coulda's needs (File names and line numbers of the Given/When/Then/And that is unimplemented)
